BaSP-W04-2023: fixed a scroll on tablet that moved the aside up and added an horizontal scroll

--- a/Week-04/css/main.css
+++ b/Week-04/css/main.css
@@ -318,6 +318,10 @@ main {
         text-align: center;
     }
 
+    #help{
+        width: 80vw;
+    }
+
     .contact {
         width: 100%;
     }
